--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-python-multipart==0.0.9
-pillow==10.4.0
-numpy==2.0.1
+# ai-virtual-tour-engine/requirements.txt
+fastapi==0.115.6
+uvicorn[standard]==0.34.0
+python-multipart==0.0.20
+numpy==2.1.3
 opencv-python-headless==4.10.0.84
-scikit-learn==1.5.1
-open-clip-torch==2.26.1
-torch==2.3.1
-requests==2.32.3
+pillow==11.0.0
