--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-# ai-virtual-tour-engine/requirements.txt
-fastapi==0.115.6
-uvicorn[standard]==0.34.0
-python-multipart==0.0.20
-numpy==2.1.3
-opencv-python-headless==4.10.0.84
-pillow==11.0.0
+fastapi
+uvicorn
+opencv-python-headless
+numpy
+python-multipart
